--- a/src/app/MARAA/spinner-screen/spinner-screen.component.html
+++ b/src/app/MARAA/spinner-screen/spinner-screen.component.html
@@ -22,7 +22,7 @@
 
     <!-- 🧩 Button Grid -->
     <div class="button-grid">
-      <button mat-raised-button color="primary" class="crm-button" routerLink="/measurement-data-moshe">נתוני מרא"ה</button>
+      <button mat-raised-button color="primary" class="crm-button" routerLink="/MeasurementDef"> הגדרת מדדים</button>
       <button mat-raised-button color="warn" class="crm-button" routerLink="/measurement-targets">עדכון יעדים  </button>
       <!-- <button mat-raised-button color="accent" class="crm-button" routerLink="/calls">שיחות מנהל</button>
      
