--- a/src/app/chameleon-reports/trauma-patients/trauma-patients.component.html
+++ b/src/app/chameleon-reports/trauma-patients/trauma-patients.component.html
@@ -135,7 +135,7 @@
       
 
       <mat-paginator
-      [pageSizeOptions]="[20, 50, 100]"
+      [pageSizeOptions]="[100]"
       showFirstLastButtons
       class="mat-paginator">
     </mat-paginator></div>
