--- a/src/app/MARAA/measurement-target-manager/measurement-target-manager.component.html
+++ b/src/app/MARAA/measurement-target-manager/measurement-target-manager.component.html
@@ -1,14 +1,14 @@
 <div class="measurement-wrapper">
 
-    <!-- Add Button -->
-    <div class="add-button-container">
-      <button mat-raised-button color="primary" (click)="addNewRow()">הוסף שורה חדשה</button>
-    </div>
-<!-- 🔍 Global Search -->
-<mat-form-field appearance="outline" class="search-box" style="width: 300px; margin: 10px 0;">
-  <mat-label>חיפוש</mat-label>
-  <input matInput [(ngModel)]="filterValue" (keyup)="applyFilter()" placeholder="חפש בטבלה">
-</mat-form-field>
+  <div class="add-button-container" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+    <button mat-raised-button color="primary" (click)="addNewRow()">הוסף שורה חדשה</button>
+  
+    <mat-form-field appearance="outline" style="width: 300px;">
+      <mat-label>חפש</mat-label>
+      <input matInput [(ngModel)]="filterValue" (keyup)="applyFilter()" placeholder="חפש בטבלה">
+    </mat-form-field>
+  </div>
+
     <!-- Measurement Target Table -->
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2" dir="rtl">
   
@@ -16,16 +16,21 @@
 <ng-container matColumnDef="MeasurementCode">
   <th mat-header-cell *matHeaderCellDef mat-sort-header>קוד מדד</th>
   <td mat-cell *matCellDef="let row">
-    <mat-form-field appearance="outline" *ngIf="!row.EntryUser">
-      <mat-select [(ngModel)]="row.MeasurementCode" placeholder="בחר קוד מדד">
+    <mat-form-field appearance="outline" style="width: 100%;">
+      <mat-select
+        [(ngModel)]="row.MeasurementCode"
+        placeholder="בחר קוד מדד"
+        [disabled]="!row.isNew" 
+      >
         <mat-option *ngFor="let option of measurementOptions" [value]="option.MeasurementCode">
           {{ option.Label }}
         </mat-option>
       </mat-select>
     </mat-form-field>
-    <span *ngIf="row.EntryUser">{{ row.MeasurementCode }}</span>
   </td>
 </ng-container>
+
+
   <!-- MeasurementShortDesc Column -->
 <ng-container matColumnDef="MeasurementShortDesc">
   <th mat-header-cell *matHeaderCellDef mat-sort-header>שם מדד</th>
@@ -66,11 +71,12 @@
       <!-- Actions Column -->
       <ng-container matColumnDef="actions" >
         <th mat-header-cell *matHeaderCellDef>פעולות</th>
-        <td mat-cell *matCellDef="let row" class="actions">
+        <td mat-cell *matCellDef="let row" style="display: flex; justify-content: center; align-items: center;">
           <button mat-icon-button color="primary" (click)="saveTarget(row)">
             <mat-icon>save</mat-icon>
           </button>
         </td>
+        
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
