--- a/src/app/MARAA/measurement-target-manager/measurement-target-manager.component.scss
+++ b/src/app/MARAA/measurement-target-manager/measurement-target-manager.component.scss
@@ -24,9 +24,10 @@
   
     .actions {
       display: flex;
+      align-items: center;
       justify-content: center;
+      padding: 0 !important;
     }
-  
     .add-button-container {
       margin-bottom: 16px;
       text-align: left;
