--- a/src/app/MARAA/measurement-def/measurement-def.component.html
+++ b/src/app/MARAA/measurement-def/measurement-def.component.html
@@ -1,76 +1,90 @@
 <mat-card class="measurement-def-card" dir="rtl">
-    <mat-card-title>הגדרות מדדים</mat-card-title>
-  
-    <!-- ➕ Add New Row Button -->
-    <!-- <div class="add-button-container">
-      <button mat-raised-button color="accent" (click)="addNewRow()">➕ הוסף שורה חדשה</button>
-    </div>
-   -->
-    <div class="table-container">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-  
-        <!-- MeasurementCode Column -->
-        <ng-container matColumnDef="MeasurementCode">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>קוד מדד</th>
-          <td mat-cell *matCellDef="let row">
-            <input matInput [(ngModel)]="row.MeasurementCode" [readonly]="!row.isNew">
-          </td>
-        </ng-container>
-  
-        <!-- MeasurementShortDesc Column -->
-        <ng-container matColumnDef="MeasurementShortDesc">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>תיאור</th>
-          <td mat-cell *matCellDef="let row">
-            <input matInput [(ngModel)]="row.MeasurementShortDesc">
-          </td>
-        </ng-container>
-  
-        <!-- Date Column -->
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך עמודה</th>
-          <td mat-cell *matCellDef="let row">
-            <input matInput [(ngModel)]="row.date" placeholder="שם עמודת תאריך">
-          </td>
-        </ng-container>
-  
-        <!-- Department Column -->
-        <ng-container matColumnDef="department">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>מחלקה עמודה</th>
-          <td mat-cell *matCellDef="let row">
-            <input matInput [(ngModel)]="row.department" placeholder="מחלקה">
-          </td>
-        </ng-container>
-  <!-- EntryUser Column -->
-<ng-container matColumnDef="EntryUser">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header>משתמש</th>
-  <td mat-cell *matCellDef="let row">{{ row.EntryUser }}</td>
+  <mat-card-title>הגדרות מדדים</mat-card-title>
+
+  <div class="table-container">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+
+      <!-- MeasurementCode Column -->
+      <ng-container matColumnDef="MeasurementCode">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>קוד מדד</th>
+        <td mat-cell *matCellDef="let row">
+          <input matInput [(ngModel)]="row.MeasurementCode" [readonly]="!row.isNew">
+        </td>
+      </ng-container>
+
+      <!-- MeasurementShortDesc Column -->
+      <ng-container matColumnDef="MeasurementShortDesc">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>תיאור</th>
+        <td mat-cell *matCellDef="let row">
+          <input matInput [(ngModel)]="row.MeasurementShortDesc">
+        </td>
+      </ng-container>
+
+      <!-- Date Column -->
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך עמודה</th>
+        <td mat-cell *matCellDef="let row">
+          <input matInput [(ngModel)]="row.date" placeholder="שם עמודת תאריך">
+        </td>
+      </ng-container>
+
+      <!-- Department Column -->
+      <ng-container matColumnDef="department">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>מחלקה עמודה</th>
+        <td mat-cell *matCellDef="let row">
+          <input matInput [(ngModel)]="row.department" placeholder="מחלקה">
+        </td>
+      </ng-container>
+
+      <!-- DefaultDepartment Column -->
+      <ng-container matColumnDef="DefaultDepartment">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>מחלקה ברירת מחדל</th>
+        <td mat-cell *matCellDef="let row">
+          <input matInput [(ngModel)]="row.DefaultDepartment" placeholder="ברירת מחדל">
+        </td>
+      </ng-container>
+<!-- Active Column -->
+<ng-container matColumnDef="Active">
+  <th mat-header-cell *matHeaderCellDef mat-sort-header>פעיל</th>
+  <td mat-cell *matCellDef="let row">
+    <mat-checkbox [(ngModel)]="row.Active" color="primary"></mat-checkbox>
+  </td>
 </ng-container>
-
-<!-- EntryDate Column -->
-<ng-container matColumnDef="EntryDate">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך עדכון</th>
-  <td mat-cell *matCellDef="let row">{{ row.EntryDate | date: 'dd/MM/yyyy HH:mm' }}</td>
-</ng-container>
-
-        <!-- Actions -->
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef>פעולות</th>
-          <td mat-cell *matCellDef="let row">
-            <button mat-button color="primary" (click)="save(row)">שמור</button>
-            <button mat-button color="warn" (click)="deleteRow(row.MeasurementCode)">מחק</button>
-
-          </td>
-
+      <!-- EntryUser Column -->
+      <ng-container matColumnDef="EntryUser">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>משתמש</th>
+        <td mat-cell *matCellDef="let row">{{ row.EntryUser }}</td>
+      </ng-container>
+        <!-- EntryUser Column -->
+        <ng-container matColumnDef="CountRecords">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>רשומות במערכת</th>
+          <td mat-cell *matCellDef="let row">{{ row.CountRecords }}</td>
         </ng-container>
   
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-      <mat-paginator
-  [pageSizeOptions]="[5, 10, 20]"
-  showFirstLastButtons
-  [pageSize]="10">
-</mat-paginator>
-    </div>
-  </mat-card>
-  
+
+      <!-- EntryDate Column -->
+      <ng-container matColumnDef="EntryDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך עדכון</th>
+        <td mat-cell *matCellDef="let row">{{ row.EntryDate | date: 'dd/MM/yyyy HH:mm' }}</td>
+      </ng-container>
+
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>פעולות</th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-button color="primary" (click)="save(row)">שמור</button>
+          <button mat-button color="warn" (click)="deleteRow(row.MeasurementCode)">מחק</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 20]"
+      [pageSize]="10"
+      showFirstLastButtons>
+    </mat-paginator>
+  </div>
+</mat-card>
