--- a/src/app/maccabi-tel-aviv/maccabi-tel-aviv.component.html
+++ b/src/app/maccabi-tel-aviv/maccabi-tel-aviv.component.html
@@ -7,6 +7,8 @@
   </header>
   <img src="assets/maccbi1.jfif" alt="סמל מכבי תל אביב" class="team-logo">
 
+  <iframe width="1250" height="703" src="https://www.youtube.com/embed/Pkr4lwKq2Fk" title="היוצרים - יש אליפות למכבי | שיר האליפות למכבי תל אביב 24\2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
   <div class="section songs">
     <audio autoplay loop hidden>
         <source src="assets/maccbisong.mp3" type="audio/mpeg">
