--- a/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
+++ b/src/app/chameleon-reports/diabetes-consultation/diabetes-consultation.component.html
@@ -48,12 +48,7 @@ class="custom-toggle-group"
                   <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
                   <mat-datepicker #endDatePicker></mat-datepicker>
                 </mat-form-field>
-                <mat-form-field  class="filter-field">
-                  <mat-label>סנן לפי מחלקות</mat-label>
-                  <mat-select [(value)]="selectedDepartments" multiple (selectionChange)="applyGlobalSourceTableFilter()">
-                    <mat-option *ngFor="let dept of departments" [value]="dept">{{ dept }}</mat-option>
-                  </mat-select>
-                </mat-form-field>
+              
       
               <!-- Filter Buttons -->
 <div class="filter-buttons" style="margin-top: 10px; text-align: right;">
@@ -63,6 +58,12 @@ class="custom-toggle-group"
   <button mat-raised-button color="warn" (click)="resetFilters()">
     אפס סינון
   </button>
+  <mat-form-field  class="filter-field">
+    <mat-label>סנן לפי מחלקות</mat-label>
+    <mat-select [(value)]="selectedDepartments" multiple (selectionChange)="applyGlobalSourceTableFilter()">
+      <mat-option *ngFor="let dept of departments" [value]="dept">{{ dept }}</mat-option>
+    </mat-select>
+  </mat-form-field>
 </div>
               </div>
             </div>
@@ -318,7 +319,8 @@ class="custom-toggle-group"
   >
     <mat-tab-group >
       <mat-tab label="ICD9 עם אומדן סוכרת">
-        <table mat-table [dataSource]="PatientWithICD9AndHaveDiabetesEstimationDataSource" class="mat-elevation-z8" matSort style="table-layout: fixed; width: 100%">
+        <table mat-table [dataSource]="PatientWithICD9AndHaveDiabetesEstimationDataSource" class="mat-elevation-z8"  matSort
+        #sortICD9HaveEstimation="matSort" style="table-layout: fixed; width: 100%">
       
           <ng-container matColumnDef="Admission_No">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
@@ -364,9 +366,8 @@ class="custom-toggle-group"
       </mat-tab>
       <!-- First Tab -->
       <mat-tab label="ICD9 ללא אומדן סכרת">
-        <table mat-table [dataSource]="PatientWithICD9AndDontHaveDiabetesEstimationDataSource"  class="mat-elevation-z8"
-        matSort
-        style="table-layout: fixed; width: 100%">
+        <table mat-table [dataSource]="PatientWithICD9AndDontHaveDiabetesEstimationDataSource" class="mat-elevation-z8" matSort #sortICD9NoEstimation="matSort" style="table-layout: fixed; width: 100%">
+
           <ng-container matColumnDef="Admission_No">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
             <td mat-cell *matCellDef="let element">{{ element.Admission_No }}</td>
@@ -414,13 +415,8 @@ class="custom-toggle-group"
             הערכת כף רגל סוכרתית
           </span>
         </ng-template>
-        <table
-          mat-table
-          [dataSource]="DiabeticFootEstimationDataSource"
-          class="mat-elevation-z8"
-          matSort
-          style="table-layout: fixed; width: 100%"
-        >
+        <table mat-table [dataSource]="DiabeticFootEstimationDataSource" class="mat-elevation-z8" matSort #sortDiabeticFootEstimation="matSort" style="table-layout: fixed; width: 100%">
+
           <ng-container matColumnDef="Admission_No">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
               Admission No
@@ -497,13 +493,8 @@ class="custom-toggle-group"
             סוכר מעל 180
           </span>
         </ng-template>
-        <table
-          mat-table
-          [dataSource]="sugerAbove180"
-          class="mat-elevation-z8"
-          matSort 
-          style="table-layout: fixed; width: 100%"
-        >
+        <table mat-table [dataSource]="sugerAbove180" class="mat-elevation-z8" matSort #sort1="matSort" style="table-layout: fixed; width: 100%">
+
           <ng-container matColumnDef="Admission_No">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
               Admission No
@@ -574,13 +565,8 @@ class="custom-toggle-group"
             סוכר מתחת ל 70
           </span>
         </ng-template>
-        <table
-          mat-table
-          [dataSource]="dataSourceBelow70"
-          class="mat-elevation-z8"
-          matSort
-          style="table-layout: fixed; width: 100%"
-        >
+        <table mat-table [dataSource]="dataSourceBelow70" class="mat-elevation-z8" matSort #sortBelow70="matSort" style="table-layout: fixed; width: 100%">
+
           <ng-container matColumnDef="Admission_No">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
               Admission No
@@ -646,14 +632,8 @@ class="custom-toggle-group"
            אינסולין
           </span>
         </ng-template>
-        <table
-          mat-table
-          [dataSource]="InsulinDataSource"
-          matSort
-         
-          class="mat-elevation-z8"
-          style="table-layout: fixed; width: 100%"
-        >
+        <table mat-table [dataSource]="InsulinDataSource" class="mat-elevation-z8" matSort #sort3="matSort" style="table-layout: fixed; width: 100%">
+
           <ng-container matColumnDef="Hospitalization_Patient">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Patient</th>
             <td mat-cell *matCellDef="let element">
@@ -735,14 +715,8 @@ class="custom-toggle-group"
             מטופלים עם אבחנה ICD9
           </span>
         </ng-template>
-        <table
-          mat-table
-          [dataSource]="DiagnosisICD9dataSource"
-          class="mat-elevation-z8"
-          matSort
-          
-          style="table-layout: fixed; width: 100%"
-        >
+        <table mat-table [dataSource]="DiagnosisICD9dataSource" class="mat-elevation-z8" matSort #sort4="matSort" style="table-layout: fixed; width: 100%">
+
         
           <ng-container matColumnDef="Admission_No">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -814,13 +788,8 @@ class="custom-toggle-group"
             A1C 
           </span>
         </ng-template>
-        <table
-          mat-table
-          [dataSource]="dataSourceHemoglobin"
-          class="mat-elevation-z8"
-          matSort
-          style="table-layout: fixed; width: 100%"
-        >
+        <table mat-table [dataSource]="dataSourceHemoglobin" class="mat-elevation-z8" matSort #sortHemoglobin="matSort" style="table-layout: fixed; width: 100%">
+
           <ng-container matColumnDef="Admission_Date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
               Admission Date
@@ -877,7 +846,7 @@ class="custom-toggle-group"
         ></mat-paginator>
       </mat-tab>
       <mat-tab label="ייעוצים">
-        <table mat-table [dataSource]="dataSourceAllConsiliums" matSort>
+        <table mat-table [dataSource]="dataSourceAllConsiliums" class="mat-elevation-z8" matSort #sortAllConsiliums="matSort" style="table-layout: fixed; width: 100%">
           <ng-container matColumnDef="Id_Num">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
             <td mat-cell *matCellDef="let element">{{ element.Id_Num }}</td>
@@ -964,9 +933,8 @@ class="custom-toggle-group"
         ></mat-paginator>
       </mat-tab>
       <mat-tab label="ללא אינסולין סוכר מעל 180">
-        <table mat-table [dataSource]="LabResultsWithoutInsulinDataSource"  class="mat-elevation-z8"
-        matSort
-        style="table-layout: fixed; width: 100%">
+        <table mat-table [dataSource]="LabResultsWithoutInsulinDataSource" class="mat-elevation-z8" matSort #sortWithoutInsulin="matSort" style="table-layout: fixed; width: 100%">
+
           <ng-container matColumnDef="Admission_No">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
             <td mat-cell *matCellDef="let element">{{ element.Admission_No }}</td>
@@ -1007,7 +975,7 @@ class="custom-toggle-group"
       </mat-tab>
       
       <mat-tab label="מטופלים סוכרתיים עם קטטר ">
-        <table mat-table [dataSource]="DiabeticPatientsWithCatheterOrdersDataSource" matSort class="mat-elevation-z8"  style="table-layout: fixed; width: 100% " >
+        <table mat-table [dataSource]="DiabeticPatientsWithCatheterOrdersDataSource" class="mat-elevation-z8" matSort #sortCatheterOrders="matSort" style="table-layout: fixed; width: 100%">
       
           <ng-container matColumnDef="Admission_No">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
