--- a/src/app/chameleon-reports/diabetes-consultation/lab-results-detail-dialog/lab-results-detail-dialog.component.scss
+++ b/src/app/chameleon-reports/diabetes-consultation/lab-results-detail-dialog/lab-results-detail-dialog.component.scss
@@ -112,3 +112,12 @@ td.mat-cell {
   color: darkgreen;
   font-weight: bold;
 }
+
+.dialog-title-bar {
+  background-color: #f5f5f5;
+  padding: 8px 16px;
+  cursor: move;
+  border-radius: 4px 4px 0 0;
+  font-weight: bold;
+  border-bottom: 1px solid #ccc;
+}
