--- a/src/app/ServiceCRM/questionnaire-remarks-phone-call-dialog/questionnaire-remarks-phone-call-dialog.component.html
+++ b/src/app/ServiceCRM/questionnaire-remarks-phone-call-dialog/questionnaire-remarks-phone-call-dialog.component.html
@@ -44,6 +44,7 @@
           <mat-option value="שלילי">שלילי</mat-option>
           <mat-option value="טופל">טופל</mat-option>
           <mat-option value="המשך טיפול">המשך טיפול</mat-option>
+          <mat-option value="נקרא">נקרא  </mat-option>
         </mat-select>
       </mat-form-field>
   
