--- a/src/app/ServiceCRM/questionnaire-remarks/questionnaire-remarks.component.html
+++ b/src/app/ServiceCRM/questionnaire-remarks/questionnaire-remarks.component.html
@@ -125,7 +125,10 @@ style="cursor: pointer; float: left; margin-bottom: 10px;" />
         <th mat-header-cell *matHeaderCellDef>הערות מנהל</th>
         <td mat-cell *matCellDef="let row">{{ row.ManagerRemarks }}</td>
       </ng-container>
-
+      <ng-container matColumnDef="UserName">
+        <th mat-header-cell *matHeaderCellDef>שם נציג שטיפל </th>
+        <td mat-cell *matCellDef="let row">{{ row.UserName }}</td>
+      </ng-container>
       <ng-container matColumnDef="EntryDate" sticky>
         <th mat-header-cell *matHeaderCellDef>עודכן בתאריך</th>
         <td mat-cell *matCellDef="let row">{{ row.EntryDate | date: 'dd/MM/yyyy HH:mm' }}</td>
