--- a/src/app/chameleon-reports/physio-equipment-report/physio-equipment-report.component.html
+++ b/src/app/chameleon-reports/physio-equipment-report/physio-equipment-report.component.html
@@ -17,24 +17,32 @@
           <div dir="rtl" class="card">
             <div class="filter-row">
                 <mat-form-field class="filter-field">
-                  <mat-label>מחלקה</mat-label>
-                  <input matInput [formControl]="getFormControl('Department')" />
-                </mat-form-field>
-            
+                    <mat-label>מחלקה</mat-label>
+                    <mat-select [formControl]="getFormControl('Department')" multiple>
+                      <mat-option *ngFor="let dept of uniqueDepartments" [value]="dept">
+                        {{ dept }}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
                 <mat-form-field class="filter-field">
                   <mat-label>מספר אשפוז</mat-label>
                   <input matInput [formControl]="getFormControl('AdmissionNo')" />
                 </mat-form-field>
             
                 <mat-form-field class="filter-field">
-                  <mat-label>תאריך קבלה</mat-label>
-                  <input matInput [formControl]="getFormControl('AdmissionDate')" />
-                </mat-form-field>
-            
-                <mat-form-field class="filter-field">
-                  <mat-label>תאריך שחרור</mat-label>
-                  <input matInput [formControl]="getFormControl('ReleaseDate')" />
-                </mat-form-field>
+                    <mat-label>תאריך קבלה</mat-label>
+                    <input matInput [matDatepicker]="picker1" [formControl]="getFormControl('AdmissionDate')" />
+                    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                    <mat-datepicker #picker1></mat-datepicker>
+                  </mat-form-field>
+                  
+                  <mat-form-field class="filter-field">
+                    <mat-label>תאריך שחרור</mat-label>
+                    <input matInput [matDatepicker]="picker2" [formControl]="getFormControl('ReleaseDate')" />
+                    <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                    <mat-datepicker #picker2></mat-datepicker>
+                  </mat-form-field>
+                  
               </div>
 
             <div class="reset-button-container">
@@ -56,25 +64,29 @@
   </form>
 
   <app-sys-graph *ngIf="showGraph" [graphData]="filteredData"></app-sys-graph>
-  <div class="table-scroll-wrapper">
-    <mat-table *ngIf="!showGraph" [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8 full-width-table">
+  <div class="table-scroll-container" dir="rtl">
+    <div class="mat-table-wrapper">
+      <mat-table *ngIf="!showGraph" [dataSource]="matTableDataSource" matSort class="mat-elevation-z8 full-width-table">
         <ng-container *ngFor="let column of columns" [matColumnDef]="column">
-            <mat-header-cell *matHeaderCellDef>{{ getColumnLabel(column) }}</mat-header-cell>
-            <mat-cell *matCellDef="let row">
-                {{ isDateColumn(column) ? displayDate(row[column]) : row[column] }}
-              </mat-cell>
-          </ng-container>
+          <mat-header-cell *matHeaderCellDef mat-sort-header>
+            {{ getColumnLabel(column) }}
+          </mat-header-cell>
+          <mat-cell *matCellDef="let row" [ngClass]="{ 'highlight-cell': row[column] && row[column] !== '' }">
+            {{ isDateColumn(column) ? displayDate(row[column]) : row[column] }}
+          </mat-cell>
+        </ng-container>
   
-      <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
-    </mat-table>
-
-    <mat-paginator
-  [length]="matTableDataSource.data.length"
-  [pageSize]="10"
-  [pageSizeOptions]="[10, 50, 100]"
-  showFirstLastButtons
->
-</mat-paginator>
+        <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
+      </mat-table>
+  
+      <mat-paginator
+      [length]="matTableDataSource.data.length"
+      [pageSize]="10"
+      [pageSizeOptions]="[10, 50, 100]"
+      showFirstLastButtons
+      class="rtl-paginator"
+    ></mat-paginator>
+    </div>
   </div>
   
