--- a/src/app/chameleon-reports/productivity-reports/productivity-reports.component.html
+++ b/src/app/chameleon-reports/productivity-reports/productivity-reports.component.html
@@ -22,6 +22,12 @@
           <p>צפייה בדוח קלינאות תקשורת</p>
         </mat-card-content>
       </mat-card>
+      <mat-card class="report-card" routerLink="/nutritionist-report">
+        <mat-card-content>
+          <h2>תזונה </h2>
+          <p>צפייה בדוח  תזונה</p>
+        </mat-card-content>
+      </mat-card>
     </div>
   </div>
   
