--- a/src/app/chameleon-reports/physiotherapy/physiotherapy.component.html
+++ b/src/app/chameleon-reports/physiotherapy/physiotherapy.component.html
@@ -46,7 +46,7 @@
           <!-- Summary Table -->
           <mat-card class="dashboard-card">
             <div class="card-title">
-              <h3>סיכום רכיב - ריפוי בעיסוק</h3>
+              <h3>סיכום רכיב -  פיזיותרפיה</h3>
             </div>
             <img src="../../assets/excel.png" alt="Download" (click)="exportAnamnesisResultsToExcel()" class="download-icon" width="50px" />
     
