--- a/src/app/MARAA/measurement-def/measurement-def.component.html
+++ b/src/app/MARAA/measurement-def/measurement-def.component.html
@@ -111,7 +111,7 @@
   <th mat-header-cell *matHeaderCellDef>פעולות</th>
   <td mat-cell *matCellDef="let row">
     <button mat-button color="primary" (click)="save(row)">שמור</button>
-    <button mat-button color="warn" (click)="deleteRow(row.MeasurementCode)">מחק</button>
+    <!-- <button mat-button color="warn" (click)="deleteRow(row.MeasurementCode)">מחק</button> -->
   
   </td>
 </ng-container>
