--- a/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
+++ b/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
@@ -127,7 +127,10 @@
   <!-- סיכום לפי מדד -->
   <mat-tab label="סיכום לפי מדד">
     <img src="../../assets/excel.png" alt="Download" (click)="exportMeasurementSummary()" class="download-icon icon" width="50px" style="margin-left: 10px;" />
-
+    <mat-form-field appearance="outline">
+      <mat-label>חיפוש כללי</mat-label>
+      <input matInput type="text" (input)="onMeasurementFilter($event)" placeholder="סנן בטבלה..." />
+    </mat-form-field>
     <table mat-table [dataSource]="measurementDataSource" matSort #measurementSort="matSort" class="mat-elevation-z8" dir="rtl">
 
       <ng-container matColumnDef="MeasurementCode">
@@ -192,8 +195,13 @@
 
   <!-- סיכום לפי מחלקה -->
   <mat-tab label="סיכום לפי מחלקה">
-    <img src="../../assets/excel.png" alt="Download" (click)="exportDepartmentSummary()" class="download-icon icon" width="50px" style="margin-left: 10px;" />
-
+    <div class="filter-export-row" style="display: flex; align-items: center; gap: 16px; margin: 10px 0;">
+      <img src="../../assets/excel.png" alt="Download" (click)="exportDepartmentSummary()" width="50px" />
+      <mat-form-field appearance="outline">
+        <mat-label>חיפוש כללי</mat-label>
+        <input matInput type="text" (input)="applyGlobalFilter($event, 'department')" placeholder="סנן בטבלה..." />
+      </mat-form-field>
+    </div>
     <table mat-table [dataSource]="departmentDataSource" matSort #departmentSort="matSort" class="mat-elevation-z8"dir="rtl">
 
       <ng-container matColumnDef="MeasurementCode">
@@ -250,7 +258,46 @@
       showFirstLastButtons>
     </mat-paginator>
   </mat-tab>
-  <mat-tab label="סיכום שנתי/רבעוני"> 
+  
+
+  <mat-tab label="סיכום שנתי">
+    <img src="../../assets/excel.png" alt="Download" (click)="exportYearly()" class="download-icon icon" width="50px" style="margin-left: 10px;" />
+  
+    <mat-card class="yearly-table-card" dir="rtl">
+      <mat-card-title>דוח שנתי לפי מדד</mat-card-title>
+      <div class="mat-elevation-z4">
+        <table mat-table [dataSource]="yearlyDataSource" class="mat-table" matSort>
+          <ng-container *ngFor="let col of yearlyDisplayedColumns" [matColumnDef]="col">
+            <th mat-header-cell *matHeaderCellDef>
+              {{ col === 'קוד מדד' ? 'קוד מדד' : col === 'שם מדד' ? 'שם מדד' : col }}
+            </th>
+            <td mat-cell *matCellDef="let element">
+              <ng-container *ngIf="col === 'קוד מדד' || col === 'שם מדד'; else percentageCell">
+                {{ element[col] }}
+              </ng-container>
+              <ng-template #percentageCell>
+                <span [ngClass]="getCellClass(element[col], element['קוד מדד'])">
+                  {{ element[col] !== null && element[col] !== undefined ? (element[col] | number:'1.0-0') + '%' : '' }}
+                </span>
+              </ng-template>
+            </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="yearlyDisplayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: yearlyDisplayedColumns;"></tr>
+        </table>
+  
+        <mat-paginator
+          #yearlyPaginator
+          [pageSizeOptions]="[10, 20, 50]"
+          showFirstLastButtons>
+        </mat-paginator>
+      </div>
+    </mat-card>
+  </mat-tab>
+  
+
+  <mat-tab label="סיכום רבעוני"> 
     <img src="../../assets/excel.png" alt="Download" (click)="exportQuarterly()" class="download-icon icon" width="50px" style="margin-left: 10px;" />
 
     <mat-card class="quarterly-table-card" dir="rtl">
@@ -321,11 +368,17 @@
       </div>
     </mat-card>
   </mat-tab>
-  
+
+
   <!-- ❌ סיכום תקלות במדדים -->
 <mat-tab label="לא עמדו במדד">
-  <img src="../../assets/excel.png" alt="Download" (click)="exportFailed()" class="download-icon icon" width="50px" style="margin-left: 10px;" />
-
+  <div class="filter-export-row" style="display: flex; align-items: center; gap: 16px; margin: 10px 0;">
+    <img src="../../assets/excel.png" alt="Download" (click)="exportFailed()" width="50px" />
+    <mat-form-field appearance="outline">
+      <mat-label>חיפוש כללי</mat-label>
+      <input matInput type="text" (input)="applyGlobalFilter($event, 'failed')" placeholder="סנן בטבלה..." />
+    </mat-form-field>
+  </div>
   <mat-card class="failed-cases-card" dir="rtl">
     <mat-card-title>רשימת מדדים עם מונה שונה מ-1</mat-card-title>
 
